components/konvoy-control-plane/examples/minikube/konvoy-control-plane/konvoy-control-plane.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: konvoy-system
---
apiVersion: v1
kind: Service
metadata:
  name: konvoy-control-plane
  namespace: konvoy-system
spec:
  ports:
  - port: 5678
    name: grpc-xds
  - port: 5679
    name: http-xds
  - port: 5681
    name: http-api-server
  selector:
    app: konvoy-control-plane
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konvoy-control-plane
  namespace: konvoy-system
  labels:
    app: konvoy-control-plane
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: konvoy-control-plane
  template:
    metadata:
      labels:
        app: konvoy-control-plane
    spec:
      containers:
      - name: control-plane
        image: "konvoy/konvoy-control-plane:latest"
        imagePullPolicy: IfNotPresent
        args:
        - run
        ports:
        - containerPort: 5678
        - containerPort: 5679
        - containerPort: 5681
        livenessProbe:
          httpGet:
            path: /healthy
            port: 5680
        readinessProbe:
          httpGet:
            path: /ready
            port: 5680
        resources:
          requests:
            cpu: 100m
            memory: 256Mi

---
apiVersion: v1
kind: Service
metadata:
  name: konvoy-injector
  namespace: konvoy-system
spec:
  ports:
  - port: 443
    name: https
    targetPort: 8443
  selector:
    app: konvoy-injector
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: konvoy-injector
  namespace: konvoy-system
  labels:
    app: konvoy-injector
spec:
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: konvoy-injector
  template:
    metadata:
      labels:
        app: konvoy-injector
    spec:
      containers:
      - name: control-plane
        image: "konvoy/konvoy-injector:latest"
        imagePullPolicy: IfNotPresent
        args:
        - run
        ports:
        - containerPort: 8443
        livenessProbe:
          httpGet:
            path: /healthy
            port: 8443
            scheme: HTTPS
        readinessProbe:
          httpGet:
            path: /ready
            port: 8443
            scheme: HTTPS
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
        volumeMounts:
        - name: konvoy-injector-tls-cert
          mountPath: /var/run/secrets/getkonvoy.io/konvoy-injector/tls-cert
          readOnly: true
      volumes:
      - name: konvoy-injector-tls-cert
        secret:
          secretName: konvoy-injector-tls-cert
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: konvoy-injector-webhook-configuration
webhooks:
- name: konvoy-injector.getkonvoy.io
  namespaceSelector:
    matchLabels:
      getkonvoy.io/sidecar-injection: enabled
  failurePolicy: Ignore
  clientConfig:
    caBundle:
    service:
      namespace: konvoy-system
      name: konvoy-injector
      path: /inject-sidecar
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    resources:
    - pods
