components/konvoy-control-plane/examples/minikube/konvoy-control-plane/konvoy-injector-webhook-ca.yaml
---
apiVersion: admissionregistration.k8s.io/v1beta1
kind: MutatingWebhookConfiguration
metadata:
  name: konvoy-injector-webhook-configuration
webhooks:
- name: konvoy-injector.getkonvoy.io
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURCekNDQWUrZ0F3SUJBZ0lSQUlCUm1vZWRsZFowZWxWaDVxRG8yand3RFFZSktvWklodmNOQVFFTEJRQXcKRWpFUU1BNEdBMVVFQ2hNSFFXTnRaU0JEYnpBZUZ3MHhPVEEzTWpreE16RTROREphRncweU9UQTNNamt3TVRFNApOREphTUJJeEVEQU9CZ05WQkFvVEIwRmpiV1VnUTI4d2dnRWlNQTBHQ1NxR1NJYjNEUUVCQVFVQUE0SUJEd0F3CmdnRUtBb0lCQVFDY1NOaUpEK2RGa00zc0lkdkFyUmpWL0FpdnVYVkpwdE1UU0JZZjdLY3JCZHU4andNZWRQRUwKUnZCRXloVEplY3cwdUNFWklvYlJPVFRURXFEaG8rQjZkMVpKL3lsbElNSUVobU83MzhxZ2JSdUYxRk9jMS9oVwp4ZlZqNmtrYk9HeG [...]
